--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "framer-motion": "4.1.18-rc.25"
   },
   "scripts": {
     "start": "craco start",
