--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
     "prettier": "^2.4.1",
-    "puppeteer": "^11.0.0"
+    "puppeteer": "^11.0.0",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "type": "module"
 }
