--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,15 @@
     "@craco/craco": "^6.4.1",
     "axios": "^0.21.1",
     "eslint-plugin-react": "^7.18.3",
+    "framer-motion": "4.1.18-rc.25",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-query": "^3.33.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.32.8",
-    "framer-motion": "4.1.18-rc.25"
+    "sass": "^1.32.8"
   },
   "scripts": {
     "start": "craco start",
