--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@craco/craco": "^6.4.1",
     "axios": "^0.21.1",
-    "eslint-plugin-react": "^7.18.3",
     "framer-motion": "4.1.18-rc.25",
     "http-proxy-middleware": "^1.0.5",
     "react": "^17.0.1",
@@ -20,7 +19,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.28.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
