--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,7 +9,8 @@
     ],
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "modules": true
         },
         "ecmaVersion": "latest",
         "sourceType": "module"
