--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.1",
+    "@craco/craco": "^5.9.0",
     "axios": "^0.21.1",
     "framer-motion": "4.1.18-rc.25",
     "http-proxy-middleware": "^1.0.5",
@@ -12,11 +12,11 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.33.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "sass": "^1.32.8"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "DISABLE_ESLINT_PLUGIN=true craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
@@ -38,10 +38,10 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.28.0",
-    "postcss": "^7.0.39",
+    "postcss": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
