--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true craco start",
-    "build": "craco build",
+    "build": "DISABLE_ESLINT_PLUGIN=true craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "npx eslint ."
