--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "format": "npx prettier --write .",
+    "start": "node index.js",
     "serve": "nodemon index.js"
   },
   "keywords": [],
